--- a/src/pages/editor/style.css
+++ b/src/pages/editor/style.css
@@ -14,18 +14,44 @@ html, body {
 
 }
 
-#text {
+#text, #style {
 
+  margin: 0px;
   width: 100%;
   height: 100%;
-  background-color: black;
-  color: antiquewhite;
-  padding: 5px;
+  padding: 9px;
+  resize: none;
+  font-size: 14px;
+  border: none;
+  position: absolute;
+  top: 0;
+  left: 0;
 
 }
 
-#text:focus {
+#text:focus, #style:focus {
 
   outline: none;
+
+}
+
+#text {
+
+  background-color: rgba(0, 0, 0, 0);
+  color: rgba(0, 0, 0, 0);
+  caret-color: white;
+
+}
+
+#style {
+
+  background-color: black;
+  color: white;
+
+}
+
+.cursor {
+
+  color: white;
 
 }
